[package]
name = "nutrition"
version = "0.0.1"
authors = ["Matthew Varble <mrvarble@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
dotenv = "0.15.0"
Inflector = "0.11.4"
nom = { version = "7", features = ["alloc"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uom = "0.31.1"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "rt-multi-thread", "macros"] }
